--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,9 @@ python-docx = "^1.1.2"
 openrouter-haystack = "^0.1.0"
 pypdf = "^5.6.0"
 pydantic-settings = "^2.9.1"
-isagog-platform = {git = "https://github.com/Isagog/isagog-platform.git"}
+# isagog-platform = {git = "https://github.com/Isagog/isagog-platform.git"}
 # Uncomment in development
-# isagog-platform = {path = "../isagog-platform", develop = true}
+isagog-platform = {path = "../isagog-platform", develop = true}
 toml = "^0.10.2"
 
 [build-system]
